Implement IP black/whitelisting
- can black/whitelist IP addresses using "ip_blacklist" and
  "ip_whitelist" in config.json (example_config.json updated to reflect
  this)
- update config parser to read in blacklist and whitelist contents
- send contents of list to BPF map (previously flagged_ips) which uses
  different values for black/whitelisted addresses
- TODO: add max black/whitelist size (truncate list so that we still
  have max black/whitelisted IPs)

--- a/config/example_config.json
+++ b/config/example_config.json
@@ -4,4 +4,6 @@
 	"flag_threshold": 3,
 	"action": "block",
 	"redirect_ip": "0.0.0.0"
+	"ip_blacklist": ["1.1.1.1", "2.2.2.2", "3.3.3.3"],
+	"ip_whitelist": ["8.8.8.8", "100.100.100.100"]
 }
