Refactor work queue snippet and write pthread_cond version
- work_queue.c now uses two-thread + tailq implementation like in
  current database queue implementation
- work_queue_cond.c is a version using pthread_cond_wait() +
  pthread_cond_signal() to wait for queue entries to appear (queued by
  main thread)

--- a/snippets/Makefile
+++ b/snippets/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-override CFLAGS := -Wall -Wpedantic -fopenmp -std=gnu99
+override CFLAGS := -Wall -Wpedantic -fopenmp -std=gnu99 -ggdb
 src = $(wildcard *.c)
 obj = $(src:.c=)
 
