Load default config from file (if possible)
- steps:
    1. initialise config with hardcoded defaults
    2. load from config/default.json
    3. load from user-supplied config (--config/-c)
- rename flag_threshold -> alert_threshold (number of alerts before
  blacklisting)

--- a/config/example_config.json
+++ b/config/example_config.json
@@ -1,7 +1,7 @@
 {
 	"packet_threshold": 5,
 	"port_threshold": 100,
-	"flag_threshold": 3,
+	"alert_threshold": 3,
 	"action": "block",
 	"redirect_ip": "0.0.0.0",
 	"blacklist_ip": ["1.1.1.1", "2.2.2.2", "3.3.3.3"],
