--- a/config/example_config.json
+++ b/config/example_config.json
@@ -7,5 +7,6 @@
 	"blacklist_ip": ["1.1.1.1", "2.2.2.2", "3.3.3.3"],
 	"whitelist_ip": ["8.8.8.8", "100.100.100.100"],
 	"blacklist_subnet": ["10.0.0.0/8", "1.2.3.0/24"],
-	"whitelist_subnet": ["192.168.66.0/24"]
+	"whitelist_subnet": ["192.168.66.0/24"],
+	"whitelist_port": [493, 12345]
 }
