--- a/snippets/Makefile
+++ b/snippets/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-override CFLAGS := -Wall -Wpedantic -fopenmp -std=gnu99 -ggdb
+override CFLAGS := -Wall -Wpedantic -std=gnu99 -ggdb
 src = $(wildcard *.c)
 obj = $(src:.c=)
 
