Add testing mode option to man page
- use utf8 instead of ascii when compiling
- add -t option and description

--- a/man/Makefile
+++ b/man/Makefile
@@ -3,7 +3,7 @@ out = $(in:.roff=.man)
 
 all: $(out)
 %.man: %.roff
-	groff -Tascii -man $< > $@
+	groff -T utf8 -man $< > $@
 
 .PHONY: less
 less:
