Simplify manpage Makefile
running groff on the .roff file is unnecessary; man -l renders the .roff
file correctly!

--- a/man/Makefile
+++ b/man/Makefile
@@ -1,14 +1,5 @@
 in = $(wildcard *.roff)
-out = $(in:.roff=.man)
 
-all: $(out)
-%.man: %.roff
-	groff -T utf8 -man $< > $@
-
-.PHONY: less
-less:
-	less $(out)
-
-.PHONY: clean
-clean:
-	rm -f $(out)
+.PHONY: man
+man:
+	man -l $(in)
